Fixed events page and scrollbars in home and coreteam pages

--- a/css/coreTeam.css
+++ b/css/coreTeam.css
@@ -16,6 +16,10 @@ h2 {
     overflow: auto;
 }
 
+.container::-webkit-scrollbar { 
+    display: none;
+}
+
 .contactTeam {
     display: flex;
     flex-direction: column;
